# libdmclient

./: .gitignore  AUTHORS  Makefile.am  README  configure.ac
dmcore/: Makefile.am  libdmclient.pc.in  omadmclient.pc.in
dmcore/dmclient/: codec.c  credentials.c  internals.h  omadmclient.c  package0.c  sml2tree.c  utils.c
dmcore/dmtree/: command_tl.c  command_tl.h  dmsession.c  dmsession.h  dmsettings_utils.c  dmsettings_utils.h  dmtree.c  dmtree.h  dmtree_plugin.h  dyn_buf.c  dyn_buf.h  error_macros.h  log.c  plugin_devdetails.c  plugin_devinfo.c  plugin_inbox.c  plugin_root.c  syncml_error.c  tl_session.c  tl_session.h  transaction.c  transaction.h
dmcore/dmtree/mgtobj/DevDetails/: plugin_devdetails.c
dmcore/dmtree/mgtobj/DevInfo/: plugin_devinfo.h
dmcore/dmtree/mgtobj/Inbox/: plugin_inbox.h
dmcore/dmtree/mgtobj/Root/: dmsettings.h  error.h  plugin_root.c  plugin_root.h
dmcore/include/: dmtree_plugin.h  error_macros.h  omadmclient.h  omadmtree_mo.h  syncml_error.h
dmcore/src/: callbacks.c  codec.c  credentials.c  defaultroot.c  dmsession.c  dmtree.c  dmtree.h  dyn_buf.c  internals.h  log.c  log.h  momgr.c  momgr.h  omadmclient.c  package0.c  sml2tree.c  transaction.c  uricheck.c  utils.c
tests/: Makefile.am
tests/client/: Makefile.am  main.c  test_plugin.c
tests/mgtobj/DevDetail/: plugin_devdetails.c
tests/mgtobj/DevDetails/: Makefile.am  plugin_devdetails.c  plugin_devdetails.h
tests/mgtobj/DevInfo/: Makefile.am  plugin_devinfo.c
tests/mgtobj/DmAcc/: plugin_dmacc.c
tests/mgtobj/Inbox/: Makefile.am  plugin_inbox.c
tests/mgtobj/Memory/: plugin_memory.c
tests/mgtobj/Root/: Makefile.am  dmsettings.c  dmsettings.h  dmsettings_utils.c  dmsettings_utils.h  dyn_buf.c  plugin_root.c
tests/mgtobj/Storage/: dmsettings.c  dmsettings.h  dmsettings_utils.c  dmsettings_utils.h  dyn_buf.c  dyn_buf.h  error.h  plugin_root.c  plugin_storage.c
tests/mgtobj/utils/: memory_mo_util.c  memory_mo_util.h  static_mo_util.c  static_mo_util.h
tests/windows/: main.c  plugin_devdetails.c  plugin_devinfo.c  plugin_dmacc.c  test_plugin.c  testdmclient.vcxproj  testdmclient.vcxproj.filters
windows/: libdmclient.def  libdmclient.vcxproj  libdmclient.vcxproj.filters
windows/include/: endian.h
windows/include/arpa/: inet.h
windows/source/: String.c
